@@ -109,7 +109,7 @@ public class OAuthServlet {
         }
     }
 
-    private static final Integer SC_FORBIDDEN = new Integer(
+    private static final Integer SC_FORBIDDEN = Integer.valueOf(
             HttpServletResponse.SC_FORBIDDEN);
 
     private static final Map<String, Integer> PROBLEM_TO_HTTP_CODE = OAuth.Problems.TO_HTTP_CODE;
