@@ -6,10 +6,14 @@ import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 /**
  * A returned Access Token from a Client-Credentials Grant
  */
-// https://www.imsglobal.org/spec/security/v1p0#using-json-web-tokens-with-oauth-2-0-client-credentials-grant
-// https://tools.ietf.org/html/rfc6750
 @JsonSerialize(include = JsonSerialize.Inclusion.NON_NULL)
 public class AccessToken {
+
+	// The IMS Spec has a lower case "b" in its sample JSON, but the OIDC spec and everywhere else has an upper case "B"
+	// I got this clarified in an IMS meeting 2025-04-29 that it should be upper case and other LMS's return upper case
+
+	// https://www.imsglobal.org/spec/security/v1p0#using-json-web-tokens-with-oauth-2-0-client-credentials-grant
+	// https://tools.ietf.org/html/rfc6750
 
 	public static final String TOKEN_TYPE_BEARER = "Bearer";
 	
@@ -27,7 +31,7 @@ public class AccessToken {
 
 	public AccessToken() {
 		this.token_type = TOKEN_TYPE_BEARER;
-		this.expires_in = new Long(3600);
+		this.expires_in = Long.valueOf(3600);
 	}
 
 	// Here it is a comma separated list of scopes - see RFC6750
